Polishing reports, about to break report_stats

--- a/stats/templates/stats/mosquito_ccaa_rich.html
+++ b/stats/templates/stats/mosquito_ccaa_rich.html
@@ -33,7 +33,7 @@
                 <div id="container"></div>
             </div>
             <div id="info" class="col-md-4">
-                <div class="subheader">Fes clic a les províncies per veure l'històric d'observacions</div>
+                <div class="subheader">Click on provinces to see historic observation data</div>
                 <div id="country-chart"></div>
             </div>
         </div>
