--- a/stats/templates/stats/mosquito_ccaa_rich_iframetest.html
+++ b/stats/templates/stats/mosquito_ccaa_rich_iframetest.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="container">
-            <h3>Selecciona les categories per les quals vols veure dades:</h3>
+            <h3>Choose one or more categories below to see and compare data!:</h3>
             <div class="row">
                 <div class="col-md-12">
                     <ul class="list-inline" id="categories">
@@ -29,6 +29,10 @@
                  <div class="progress"></div>
                  <iframe id="confirmed_iframe" width="1000px" height="450px"></iframe>
             </div>
+            <div id="confirmedpossible" class="grid-item">
+                 <div class="progress"></div>
+                 <iframe id="confirmedpossible_iframe" width="1000px" height="450px"></iframe>
+            </div>
             <div id="probable" class="grid-item">
                 <div class="progress"></div>
                 <iframe id="probable_iframe" width="1000px" height="450px"></iframe>
@@ -40,6 +44,10 @@
             <div id="unidentified" class="grid-item">
                 <div class="progress"></div>
                 <iframe id="unidentified_iframe" width="1000px" height="450px"></iframe>
+            </div>
+            <div id="confirmedpossibleunident" class="grid-item">
+                <div class="progress"></div>
+                <iframe id="confirmedpossibleunident_iframe" width="1000px" height="450px"></iframe>
             </div>
         </div>
     </body>
