--- a/stats/templates/stats/user_activity.html
+++ b/stats/templates/stats/user_activity.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <div class="container">
-            <h3>Això està molt buit... selecciona alguns anys per veure dades!</h3>
+            <h3>This place looks so empty... click on a few years to visualize data!</h3>
             <div class="row">
                 <div class="col-md-12">
                     <ul class="list-inline" id="years">
