Apparently didn't break user_stats, now selectable categories in graph

--- a/stats/templates/stats/report_stats_ccaa_pie.html
+++ b/stats/templates/stats/report_stats_ccaa_pie.html
@@ -47,7 +47,7 @@
     </head>
     <body>
         <div class="container">
-            <h3>This place looks so empty... click on a few years to visualize data!</h3>
+            <h3>So much empty space... click on a few years to visualize data!</h3>
             <div class="row">
                 <div class="col-md-12">
                     <ul class="list-inline" id="years">
