Publishable maps and directory

--- a/stats/templates/stats/mosquito_ccaa_rich.html
+++ b/stats/templates/stats/mosquito_ccaa_rich.html
@@ -20,6 +20,8 @@
             var title_linechart = "{{ title_linechart }}";
             var title = "{{ title }}";
             var series_title = "{{ series_title }}";
+            var minColor = "{{ minColor }}";
+            var maxColor = "{{ maxColor }}";
         </script>
         <style>
             .subheader{
