--- a/stats/templates/stats/mosquito_ccaa_rich_iframetest_sites.html
+++ b/stats/templates/stats/mosquito_ccaa_rich_iframetest_sites.html
@@ -23,8 +23,8 @@
                     </ul>
                 </div>
             </div>
-            <hr />
         </div>
+        <hr />
         <div class="grid">
             <div id="storm_drain_water" class="grid-item">
                  <div class="progress"></div>
@@ -34,13 +34,21 @@
                  <div class="progress"></div>
                  <iframe id="storm_drain_dry_iframe" width="1000px" height="450px"></iframe>
             </div>
+            <div id="storm_drain" class="grid-item">
+                 <div class="progress"></div>
+                 <iframe id="storm_drain_iframe" width="1000px" height="450px"></iframe>
+            </div>
             <div id="breeding_site_other" class="grid-item">
                 <div class="progress"></div>
                 <iframe id="breeding_site_other_iframe" width="1000px" height="450px"></iframe>
             </div>
+            <div id="all_sites" class="grid-item">
+                <div class="progress"></div>
+                <iframe id="all_sites_iframe" width="1000px" height="450px"></iframe>
+            </div>
         </div>
+        <hr />
         <div class="container">
-            <hr />
             <p>
                 License and usage policy: for internal use only. Do not distribute.
             </p>
