--- a/stats/templates/stats/user_activity.html
+++ b/stats/templates/stats/user_activity.html
@@ -39,8 +39,11 @@
                     <select id="adult_select">
                         <option value="mosquito_tiger_confirmed" selected>Confirmed tiger mosquito</option>
                         <option value="mosquito_tiger_probable">Possible tiger mosquito</option>
+                        <option value="confirmed_probable_tiger">Confirmed and possible tiger mosquito</option>
                         <option value="other_species">Other species</option>
                         <option value="unidentified">Unidentified</option>
+                        <option value="confirmed_possible_unident">Confirmed, possible and unidentified</option>
+                        <option value="all_adults">All categories</option>
                     </select>
                 </div>
                 <div class="col-md-6">
@@ -48,7 +51,9 @@
                     <select id="site_select">
                         <option value="storm_drain_water" selected>Storm drain with water</option>
                         <option value="storm_drain_dry">Storm drain without water</option>
+                        <option value="storm_drain">Storm drain with or without water</option>
                         <option value="breeding_site_other">Other breeding sites</option>
+                        <option value="all_sites">All categories</option>
                     </select>
                 </div>
             </div>
