Added datawrapper charts to directory

--- a/stats/templates/stats/directory.html
+++ b/stats/templates/stats/directory.html
@@ -11,6 +11,11 @@
 
         <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
         <script src={% static "tigacrafting/bootstrap-3.2.0-dist/js/bootstrap.min.js" %}></script>
+        <style>
+            .separador_seccio {
+                margin-top: 30px;
+            }
+        </style>
     </head>
     <body>
         <div class="container">
@@ -28,7 +33,29 @@
                     <li><a target="_blank" href="{% url 'mosquito_ccaa_rich_iframetest_sites' %}">Province sampling comparison, sites</a> - Same as above, with breeding sites</li>
                     <li><a target="_blank" href="{% url 'report_stats' %}">Adult and breeding site sampling, monthly</a> - Side by side comparison of number of reports per month, with selectable categories</li>
                 </ul>
-            <div>
+            </div>
+            <hr />
+            <div class="row">
+                <h1>Datawrapper charts</h1>
+                <div class="col-md-12">
+                    <iframe id="datawrapper-chart-usXCS" src="//datawrapper.dwcdn.net/usXCS/6/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="500"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["usXCS"]={},window.datawrapper["usXCS"].embedDeltas={"100":1286.666666,"200":790.6666660000001,"300":665.6666660000001,"400":591.6666660000001,"500":531.6666660000001,"700":499.666666,"800":471.666666,"900":439.666666,"1000":439.666666},window.datawrapper["usXCS"].iframe=document.getElementById("datawrapper-chart-usXCS"),window.datawrapper["usXCS"].iframe.style.height=window.datawrapper["usXCS"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["usXCS"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("usXCS"==b)window.datawrapper["usXCS"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+                </div>
+                <div class="col-md-12 separador_seccio">
+                    <iframe id="datawrapper-chart-WN4hl" src="//datawrapper.dwcdn.net/WN4hl/5/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="879"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["WN4hl"]={},window.datawrapper["WN4hl"].embedDeltas={"100":1090.666666,"200":984.666666,"300":940.666666,"400":923.666666,"500":895.666666,"700":878.666666,"800":878.666666,"900":878.666666,"1000":878.666666},window.datawrapper["WN4hl"].iframe=document.getElementById("datawrapper-chart-WN4hl"),window.datawrapper["WN4hl"].iframe.style.height=window.datawrapper["WN4hl"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["WN4hl"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("WN4hl"==b)window.datawrapper["WN4hl"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+                </div>
+                <div class="col-md-12 separador_seccio">
+                    <iframe id="datawrapper-chart-SHINk" src="//datawrapper.dwcdn.net/SHINk/3/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="460"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["SHINk"]={},window.datawrapper["SHINk"].embedDeltas={"100":796.6666660000001,"200":597.6666660000001,"300":520.6666660000001,"400":476.666666,"500":459.666666,"700":431.666666,"800":431.666666,"900":431.666666,"1000":414.666666},window.datawrapper["SHINk"].iframe=document.getElementById("datawrapper-chart-SHINk"),window.datawrapper["SHINk"].iframe.style.height=window.datawrapper["SHINk"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["SHINk"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("SHINk"==b)window.datawrapper["SHINk"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+                </div>
+                <div class="col-md-12 separador_seccio">
+                    <iframe id="datawrapper-chart-AKToR" src="//datawrapper.dwcdn.net/AKToR/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="287"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["AKToR"]={},window.datawrapper["AKToR"].embedDeltas={"100":588.6666660000001,"200":408.666666,"300":347.666666,"400":314.666666,"500":286.666666,"700":286.666666,"800":269.666666,"900":269.666666,"1000":269.666666},window.datawrapper["AKToR"].iframe=document.getElementById("datawrapper-chart-AKToR"),window.datawrapper["AKToR"].iframe.style.height=window.datawrapper["AKToR"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["AKToR"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("AKToR"==b)window.datawrapper["AKToR"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+                </div>
+                <div class="col-md-12 separador_seccio">
+                    <iframe id="datawrapper-chart-vlZ0T" src="//datawrapper.dwcdn.net/vlZ0T/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="270"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["vlZ0T"]={},window.datawrapper["vlZ0T"].embedDeltas={"100":493.666666,"200":347.666666,"300":330.666666,"400":286.666666,"500":269.666666,"700":269.666666,"800":269.666666,"900":269.666666,"1000":269.666666},window.datawrapper["vlZ0T"].iframe=document.getElementById("datawrapper-chart-vlZ0T"),window.datawrapper["vlZ0T"].iframe.style.height=window.datawrapper["vlZ0T"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["vlZ0T"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("vlZ0T"==b)window.datawrapper["vlZ0T"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+                </div>
+                <div class="col-md-12 separador_seccio">
+                    <iframe id="datawrapper-chart-eOXxA" src="//datawrapper.dwcdn.net/eOXxA/3/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="391"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["eOXxA"]={},window.datawrapper["eOXxA"].embedDeltas={"100":663.6666660000001,"200":523.6666660000001,"300":435.666666,"400":435.666666,"500":418.666666,"700":390.666666,"800":373.666666,"900":373.666666,"1000":373.666666},window.datawrapper["eOXxA"].iframe=document.getElementById("datawrapper-chart-eOXxA"),window.datawrapper["eOXxA"].iframe.style.height=window.datawrapper["eOXxA"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["eOXxA"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("eOXxA"==b)window.datawrapper["eOXxA"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+                </div>
+            </div>
         </div>
     </body>
 </html>
