Added show_usage view to directory

--- a/stats/templates/stats/directory.html
+++ b/stats/templates/stats/directory.html
@@ -32,6 +32,7 @@
                     <li><a target="_blank" href="{% url 'mosquito_ccaa_rich_iframetest' %}">Province sampling comparison, adults</a> - Shows a cloropleth map with number of observations determining color intensity. When click in a province, it shows a mini-graph with the sampling distribution in the province by year. With Shift+click, multiple provinces can be selected and compared.</li>
                     <li><a target="_blank" href="{% url 'mosquito_ccaa_rich_iframetest_sites' %}">Province sampling comparison, sites</a> - Same as above, with breeding sites</li>
                     <li><a target="_blank" href="{% url 'report_stats' %}">Adult and breeding site sampling, monthly</a> - Side by side comparison of number of reports per month, with selectable categories</li>
+                    <li><a target="_blank" href="{% url 'show_usage' %}">User acquisition</a> - Number of registered mobile app users from the beginning of the project up to now</li>
                 </ul>
             </div>
             <hr />
