Added chinese translators to english and zh about

--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -30,5 +30,15 @@
         <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/lokimicagran.jpg" %}">
     </p>
 
+    <p>Chinese translations by:</p>
+    <p>
+        <ul>
+            <li>Sabrina Wong</li>
+            <li>Ivion Xie</li>
+            <li>Dickson Ho</li>
+            <li>Vincent Chung</li>
+            <li>Mendel Wong</li>
+        </ul>
+    </p>
 
 {% endblock %}
