--- a/stats/templates/stats/directory.html
+++ b/stats/templates/stats/directory.html
@@ -33,6 +33,8 @@
                     <li><a target="_blank" href="{% url 'mosquito_ccaa_rich_iframetest_sites' %}">Province sampling comparison, sites</a> - Same as above, with breeding sites</li>
                     <li><a target="_blank" href="{% url 'report_stats' %}">Adult and breeding site sampling, monthly</a> - Side by side comparison of number of reports per month, with selectable categories</li>
                     <li><a target="_blank" href="{% url 'show_usage' %}">User acquisition</a> - Number of registered mobile app users from the beginning of the project up to now</li>
+                    <li><a target="_blank" href="{% url 'adult_sunburst' %}">Sunburst adults</a> - Distribution of mosquito confirmed and probable last 30 days, by region</li>
+                    <li><a target="_blank" href="{% url 'site_sunburst' %}">Sunburst breeding sites</a> - Distribution of breeding sites last 30 days, by region</li>
                 </ul>
             </div>
             <hr />
