Added hashtag map to directory

--- a/stats/templates/stats/directory.html
+++ b/stats/templates/stats/directory.html
@@ -26,6 +26,7 @@
             </div>
             <div class="row">
                 <ul>
+                    <li><a target="_blank" href="{% url 'hashtag_map' %}">Hashtag map</a> - Shows latest reports by #hashtag.</li>
                     <li><a target="_blank" href="{% url 'speedmeter' %}">Speed Meter</a> - shows number of reports that entered the system last week, as well as average number of reports per day (last 7 days). This graph self updates every 10 seconds.</li>
                     <li><a target="_blank" href="{% url 'report_stats_ccaa_pie' %}">Pie chart adults</a> - Shows number of adult observations geographically, with pie charts showing different categories of adult observations. The size of the pies indicates the number of observations.</li>
                     <li><a target="_blank" href="{% url 'report_stats_ccaa_pie_sites' %}">Pie chart sites</a> - Same as above, with breeding sites</li>
