Changed badge color

--- a/stats/templates/stats/hashtag_map.html
+++ b/stats/templates/stats/hashtag_map.html
@@ -18,6 +18,9 @@
             .call_to_action {
                 color: red;
             }
+            .badge{
+                background-color: #bd2727;
+            }
         </style>
         <script src={% static "tigapublic/lib/jquery/dist/jquery.js" %}></script>
         <script src={% static "tigapublic/lib/leaflet/dist/leaflet.js" %}></script>
