--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -52,7 +52,7 @@
 
     <li>
 
-        <div class="btn-group" id="status_grp" data-toggle="buttons">
+        <div class="btn-group" id="status_grp" data-toggle="buttons" style="margin-right:5px;">
             <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom"
                    title="Unchecked" id="unchecked_btn">
                 <input type="radio" name="pending" autocomplete="off"><span class="glyphicon glyphicon-time"
@@ -69,6 +69,26 @@
                 <input type="radio" name="pending" autocomplete="off"><span
                     class="glyphicon glyphicon-thumbs-down"></span> <span
                     class="badge">{{ n_revised }}</span>
+            </label>
+        </div>
+    </li>
+
+    <li>
+        <div class="btn-group" id="location_grp" data-toggle="buttons">
+            <label class="btn btn-primary btn-sm navbar-btn active" data-toggle="tooltip" data-placement="bottom" title="Entolab-All" id="ento-all">
+                <input type="radio" name="loc_all" autocomplete="off">
+                <span>ALL</span>
+                <span class="badge">{{ n_loc_all }}</span>
+            </label>
+            <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Entolab-Spain" id="ento-es">
+                <input type="radio" name="loc_spain" autocomplete="off">
+                <span>ES</span>
+                <span class="badge">{{ n_loc_spain }}</span>
+            </label>
+            <label class="btn btn-primary btn-sm navbar-btn" data-toggle="tooltip" data-placement="bottom" title="Entolab-Europe" id="ento-eu">
+                <input type="radio" name="loc_europe" autocomplete="off">
+                    <span>EU</span>
+                    <span class="badge">{{ n_loc_europe }}</span>
             </label>
         </div>
     </li>
@@ -212,14 +232,15 @@
 
         var public_btn = $("#public_btn"), flagged_btn = $("#flagged_btn"), hidden_btn = $("#hidden_btn");
 
-
         var final_status = "{{ final_status }}";
-
 
         var unchecked_btn = $("#unchecked_btn"), confirmed_btn = $("#confirmed_btn"), revised_btn = $("#revised_btn");
 
-
         var checked = "{{ checked }}";
+
+        var loc_all_btn = $("#ento-all"), loc_spain_btn = $("#ento-es"), loc_europe_btn = $("#ento-eu");
+
+        var loc = "{{ loc }}";
 
         function clear_btns() {
             public_btn.removeClass("active");
@@ -228,12 +249,16 @@
             unchecked_btn.removeClass("active");
             revised_btn.removeClass("active");
             confirmed_btn.removeClass("active");
+            loc_all_btn.removeClass("active");
+            loc_spain_btn.removeClass("active");
+            loc_europe_btn.removeClass("active");
         }
 
         function activate_btns() {
             clear_btns();
             final_status == "public" ? public_btn.addClass("active") : (final_status == "flagged" ? flagged_btn.addClass("active") : (final_status == "hidden" ? hidden_btn.addClass("active") : {}) );
             checked == "revised" ? revised_btn.addClass("active") : (checked == "confirmed" ? confirmed_btn.addClass("active") : (checked == "unchecked" ? unchecked_btn.addClass("active") : {} ));
+            loc == "spain" ? loc_spain_btn.addClass("active") : ( loc == "europe" ? loc_europe_btn.addClass("active") : ( loc == "na" ? loc_all_btn.addClass("active") : {} ));
 
         }
 
@@ -262,6 +287,7 @@
             qp += '&tags_filter=' + str_tags;
             qp += '&status=' + this_status;
             qp += '&pending=' + pending;
+
             if (flagged_btn.hasClass("active")) {
                 $("#final_status_input").val("flagged");
                 qp += '&final_status=' + 'flagged';
@@ -272,6 +298,7 @@
                 $("#final_status_input").val("public");
                 qp += '&final_status=' + 'public';
             }
+
             if (revised_btn.hasClass("active")) {
                 $("#checked_input").val("revised");
                 qp += '&checked=' + 'revised';
@@ -282,6 +309,15 @@
                 $("#checked_input").val("unchecked");
                 qp += '&checked=' + 'unchecked';
             }
+
+            if( loc_spain_btn.hasClass("active") ){
+                qp += '&loc=spain';
+            } else if ( loc_europe_btn.hasClass("active") ){
+                qp += '&loc=europe';
+            } else {
+                qp += '&loc=na';
+            }
+
             return(qp);
         }
 
@@ -308,15 +344,25 @@
             background_save(qp);
         }
 
+        function submit_queries_loc(event) {
+            gear.show();
+            loc = event.data.extr;
+            activate_btns();
+            var qp = query_selectors();
+            background_save(qp);
+        }
+
         public_btn.on('click', {extr: 'public'}, submit_queries_final_status);
         flagged_btn.on('click', { extr: 'flagged'}, submit_queries_final_status);
         hidden_btn.on('click', {extr: 'hidden'}, submit_queries_final_status);
-
 
         unchecked_btn.on('click', {extr: 'unchecked'}, submit_queries_checked);
         confirmed_btn.on('click', { extr: 'confirmed'}, submit_queries_checked);
         revised_btn.on('click', { extr: 'revised'}, submit_queries_checked);
 
+        loc_all_btn.on('click', {extr: 'na'}, submit_queries_loc);
+        loc_spain_btn.on('click', {extr: 'spain'}, submit_queries_loc);
+        loc_europe_btn.on('click', {extr: 'europe'}, submit_queries_loc);
 
     </script>
 
