--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -304,7 +304,7 @@
                     Report {{ form.instance.report.version_UUID }}
                     </strong>
                     {{ form.instance.report.creation_time|date:"d/m/y H:i" }} UTC
-                    - {{ form.instance.report.country.name_engl }}
+                    - {{ form.instance.report.country_label }}
                 </h4>
             </div>
             <div class="col-md-1">
